# citron

./: cargo.toml
chesty-cli/: Cargo.toml
chesty-cli/src/: main.rs
chesty-core/: Cargo.toml
chesty-core/benches/: simple_position.rs
chesty-core/src/: analysis.rs  evaluation.rs  heatmap.rs  killer.rs  lib.rs  magic.rs  move_gen.rs  move_ordering.rs  nnue.rs  pgn.rs  piece.rs  position.rs  quiescence.rs  transposition_table.rs
chesty-core/src/evaluation/: early_game.rs  end_game.rs  mid_game.rs  mod.rs
chesty-core/src/magic/: bishop.rs  mod.rs  pawn.rs
citron-cli/: Cargo.toml
citron-cli/src/: main.rs
citron-core/: Cargo.toml
citron-core/benches/: simple_position.rs
citron-core/src/: analysis.rs  lib.rs  move_gen.rs  move_ordering.rs  pgn.rs  position.rs  quiescence.rs  transposition_table.rs
citron-core/src/evaluation/: early_game.rs  mod.rs
citron-core/src/magic/: consts.rs  mod.rs  pawn.rs  rook.rs
