[package]
name = "chesty-core"
version = "0.1.0"
edition = "2021"

[dependencies]
rand = "*"
rayon = "^1.5"
dashmap = "^5.0"
tch = { version = "^0.6", optional = true }

[dev-dependencies]
criterion = "^0.3"

[features]
debug = []
nn_evaluation = ["tch"]

[[bench]]
name = "simple_position"
harness = false
