[package]
name = "chesty-core"
version = "0.1.0"
edition = "2021"

[dependencies]
rand = "*"
tch = { version = "^0.6", optional = true }
indicatif = { version = "^0.16", optional = true }

[dev-dependencies]
criterion = "^0.3"

[features]
debug = ["indicatif"]
nn_evaluation = ["tch"]

[[bench]]
name = "simple_position"
harness = false
